# pos-ml-eng-tech-challenge-fase-02

./: .dockerignore  .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  ACTION_PLAN.md  CHECKLIST.md  COMO_COMPLETAR_PIPELINE.md  COMO_TESTAR_DVC.md  DVC_IMPLEMENTATION_SUMMARY.md  DVC_PIPELINE.md  DVC_POWERSHELL_GUIDE.md  Dockerfile  ERRO_CORRIGIDO.md  FINAL_SUMMARY_DVC.md  PIPELINE_COMPLETO.md  POWERSHELL_DVC_FIX.md  QUICKSTART_DVC.md  README.md  README_DVC_IMPLEMENTATION.md  TESTES_DVC_RAPIDO.md  best_model_gradient_boosting.pkl  docker-compose.yml  dvc.yaml  main.py  model_comparison.csv  pyproject.toml  run_dvc_pipeline.sh  simple-eda-sales-and-customer-patterns.ipynb
.dvc/: config
artifacts/: evaluation_report.json  feature_stats.json  metrics_Ablation_FINAL_no_aux_emb32.json  metrics_Ablation_no_aux_emb32.json  metrics_Audit_Spearman_18feat.json  metrics_Audit_Spearman_18feat_E15.json  metrics_NCF_FINAL_emb32_h64-32_d0.5_lr5e-4.json  metrics_NCF_emb32_h128-64-32_d0.3_lr1e-3.json  metrics_NCF_emb64_h256-128-64_d0.4_lr5e-4.json  metrics_emb16.json  model_comparison.csv
artifacts/baselines/: .gitkeep  recommendations_PopularityBaseline_PopularityBaseline_K10.csv  recommendations_PopularityBaseline_PopularityBaseline_K20.csv  recommendations_PopularityBaseline_PopularityBaseline_K5.csv  recommendations_TopRatedBaseline_TopRated_K10_MinRev15.csv  recommendations_TopRatedBaseline_TopRated_K10_MinRev5.csv  recommendations_TopRatedBaseline_TopRated_K20_MinRev5.csv  recommendations_TruncatedSVDBaseline_TruncatedSVD_K10.csv  recommendations_TruncatedSVDBaseline_TruncatedSVD_K20.csv
configs/: ncf_best.yaml  requirements.txt  selected_features.yaml
data/: olist_order_payments_dataset.csv.dvc
docs/: CHECKLIST.md  DVC_REMOTE_SETUP.md  GUIA_UPLOAD_DVC.md  GUIDE.md  ML_EXECUTION_GUIDE.md  MODEL_CARD.md  NAMING_CONVENTIONS.md  NCF_IMPLEMENTATION_PLAN.md  PRESENTATION_SCRIPT.md  PRESENTATION_SCRIPT_FAST.md  REPORT.md  SRP_RESPONSIBILITIES.md  propostaV1.md
front/: app_vis.py
models/: ncf_production.pt.dvc  scaler_production.pkl.dvc
notebooks/: 00_pipeline_explanation.ipynb  01_eda.ipynb  01_eda_executed.ipynb  02_eda_feature_engineered.ipynb  02_eda_feature_engineered_executed.ipynb  03_baseline_training.ipynb  04_ncf_training_results.ipynb  demo.ipynb
reports/: eda_report.md  feature_audit_spearman.md  feature_selection_report.md  ncf_optimization_report.md
scripts/: check_dvc_status.py  feature_selection.py  fix_csv.py  generate_ncf_figures.py  generate_optimization_figure.py  register_model_dagshub.py  train_ncf.py  validate_env.py
src/: api.py  baseline_models.py  config.py  data_preparation.py  eda.py  feature_engineering.py  model_evaluation.py  model_training.py  preprocessing_pipeline.py  train.py
src/data/: __init__.py  dataset.py  preprocessing.py  splits.py  strategies.py
src/models/: __init__.py  factory.py  losses.py  ncf.py
src/training/: __init__.py  evaluate.py
tests/: simple_test.py  test_import.py  test_preprocess_step.py
