[tool.poetry]
name = "pos-ml-eng-tech-challenge-fase-02"
version = "0.1.0"
description = "Sistema de Recomendação de Produtos para E-commerce"
authors = ["Fábio Polli <seu.email@exemplo.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
scikit-learn = "^1.3.0"
mlflow = "^2.5.0"
dvc = {extras = ["s3"], version = "^3.0.0"} # Ajuste o extra conforme sua nuvem (azure, gdrive)
pandas = "^2.0.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.3.0"
pre-commit = "^3.6.0"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"] # Erros, Falhas e ordenação de Imports (Isort)

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
