[tool.poetry]
name = "pos-ml-eng-tech-challenge-fase-02"
version = "0.1.0"
description = "Sistema de Recomendação de Produtos para E-commerce baseado no dataset Olist"
authors = [
    "Fábio Polli",
    "Bill",
    "Denis",
    "Romário"
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.10 || ~3.11 || ~3.12"
torch = "^2.0.0"
scikit-learn = "^1.3.0"
mlflow = "^2.5.0"
dvc = {extras = ["s3"], version = "^3.0.0"}
pandas = "^2.0.0"
numpy = "^1.24.0"
# ADICIONAR:
pyarrow = "^15.0.0"
loguru = "^0.7.2"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
dvc-s3 = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.3.0"
pre-commit = "^3.6.0"
# ADICIONAR:
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
ipykernel = "^6.29.0"
notebook = "^7.0.0"
jupyterlab = "^4.0.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
dvc-gs = "^3.0.0"

[tool.poetry.group.aws.dependencies]
# OPCIONAL - comentar ou manter conforme decisão
boto3 = "^1.34"

[tool.poetry.group.gcp.dependencies]
# OPCIONAL
google-cloud-storage = "^2.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [".venv", "data", "models", "mlruns", ".dvc", "reports/figures"]

[tool.ruff.lint]
# MANTER do oficial: E, F, I
# EXPANDIR do nosso: W, N, UP, B, C4, SIM, RUF
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
